--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 tika==1.24
 regex==2021.8.3
 numpy==1.17.4
-fitz==0.0.1.dev2
+PyMuPDF
 transformers==4.9.2
 reportlab==3.5.34
 streamlit==0.89.0
@@ -16,5 +16,5 @@ sentence_transformers==2.0.0
 EbookLib==0.17.1
 pandas==1.3.3
 beautifulsoup4==4.10.0
-newspaper==0.1.0.7
+newspaper3k
 python_dateutil==2.8.2
